test/simple/correct/FloatUnaryMinus2.hs
module FloatUnaryMinus2 where

main :: Int
main = case -.2.0 of
        3.0 -> 0
        2.0 -> 1
        1.0 -> 2
        _   -> 3
        