test/simple/typeerrors/Heuristics/AppRemove2.hs
module AppRemove2 where

f :: Int -> Int
f x = x

main = f 3 True False
